# gb-sprite

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  gb-sprite.cabal
.github/workflows/: ci.yml  publish.yml
src/GBSprite/: Animation.hs  BMP.hs  Canvas.hs  Color.hs  Compose.hs  Dither.hs  Draw.hs  Export.hs  Gradient.hs  NineSlice.hs  Noise.hs  PNG.hs  Palette.hs  Sheet.hs  Sprite.hs  Text.hs  Tilemap.hs  Transform.hs  VFX.hs
src/GBSprite/Export/: PNG.hs
test/: Main.hs
