cabal-version: 2.4
name:          gb-sprite
version:       0.1.0.0
synopsis:      Procedural 2D sprite and VFX generation for GB games
description:
  A pure Haskell library for generating 2D sprites, animations,
  and visual effects. No external image libraries — just math.
  .
  Generate sprites, draw primitives, compose layers, pack sprite
  sheets, render bitmap text, and create procedural VFX. Export
  to BMP natively, or enable the @juicy-pixels@ flag for PNG.

license:       MIT
license-file:  LICENSE
author:        Gondola Bros Entertainment
maintainer:    gondola.bros.entertainment@gmail.com
category:      Graphics
build-type:    Simple
tested-with:   GHC ==9.6.7
extra-doc-files: README.md
homepage:      https://github.com/Gondola-Bros-Entertainment/gb-sprite
bug-reports:   https://github.com/Gondola-Bros-Entertainment/gb-sprite/issues

source-repository head
  type:     git
  location: https://github.com/Gondola-Bros-Entertainment/gb-sprite.git

flag juicy-pixels
  description: Enable PNG export via JuicyPixels
  default:     False
  manual:      True

library
  exposed-modules:
    GBSprite.Animation
    GBSprite.BMP
    GBSprite.Canvas
    GBSprite.Color
    GBSprite.Compose
    GBSprite.Draw
    GBSprite.Export
    GBSprite.Palette
    GBSprite.Sheet
    GBSprite.Sprite
    GBSprite.Text
    GBSprite.Tilemap
    GBSprite.Transform
    GBSprite.VFX

  hs-source-dirs:  src
  build-depends:
    base        >=4.18 && <5,
    bytestring  >=0.11 && <0.13,
    containers  >=0.6  && <0.8,
    vector      >=0.13 && <0.14

  if flag(juicy-pixels)
    build-depends: JuicyPixels >=3.3 && <3.5
    cpp-options:   -DJUICY_PIXELS

  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -O2
  default-extensions:
    BangPatterns

test-suite gb-sprite-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
    base        >=4.18 && <5,
    bytestring  >=0.11 && <0.13,
    vector      >=0.13 && <0.14,
    gb-sprite

  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -O2
  default-extensions:
    BangPatterns
