cabal-version: 3.0
name:          gb-sprite
version:       0.3.0.1
stability:     experimental
synopsis:      Procedural 2D sprite and VFX generation
description:
  A pure Haskell library for generating 2D sprites, animations,
  and visual effects. No external image libraries — just math.
  Generate sprites, draw primitives, compose layers, pack sprite
  sheets, render bitmap text, and create procedural VFX. Export
  to BMP natively, or enable the @juicy-pixels@ flag for PNG.

license:       BSD-3-Clause
license-file:  LICENSE
author:        Devon Tomlin
maintainer:    devon.tomlin@novavero.ai
category:      Graphics
build-type:    Simple
tested-with:   GHC ==9.8.4
extra-doc-files: README.md CHANGELOG.md
homepage:      https://github.com/Gondola-Bros-Entertainment/gb-sprite
bug-reports:   https://github.com/Gondola-Bros-Entertainment/gb-sprite/issues

source-repository head
  type:     git
  location: https://github.com/Gondola-Bros-Entertainment/gb-sprite.git

library
  exposed-modules:
    GBSprite.Animation
    GBSprite.BMP
    GBSprite.Canvas
    GBSprite.Color
    GBSprite.Compose
    GBSprite.Dither
    GBSprite.Draw
    GBSprite.Export
    GBSprite.Gradient
    GBSprite.NineSlice
    GBSprite.Noise
    GBSprite.Palette
    GBSprite.PNG
    GBSprite.Sheet
    GBSprite.Sprite
    GBSprite.Text
    GBSprite.Tilemap
    GBSprite.Transform
    GBSprite.VFX

  hs-source-dirs:  src
  build-depends:
    base        >=4.18 && <5,
    bytestring  >=0.11 && <0.13,
    vector      >=0.13 && <0.14,
    zlib        >=0.6  && <0.8

  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat
  default-extensions:
    BangPatterns

test-suite gb-sprite-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
    base        >=4.18 && <5,
    bytestring  >=0.11 && <0.13,
    directory   >=1.3  && <1.4,
    vector      >=0.13 && <0.14,
    gb-sprite

  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat
  default-extensions:
    BangPatterns
